--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -61,9 +61,9 @@ features:
     theme_light: github-light
     theme_dark: dracula
   math:
-    enable: false
+    enable: true
   privacy_pack:
-    enable: false
+    enable: true
   repository:
     url: 'https://github.com/wowchemy/hugo-notes-theme'
     content_dir: content
